--- a/Styles/index.css
+++ b/Styles/index.css
@@ -23,7 +23,7 @@ body {
   height: 100vh;
   display: flex;
   align-items: center;
-}
+}x½
 
 /* Our Content holder for width and background color */
 .content {
@@ -31,12 +31,7 @@ body {
   aspect-ratio: 16 / 9;
   background: #333333;
   margin: 30px; /* margin around all the content */
-  /* display: flex; */ /* Breaks the site on activation! */
-}
-
-/* For presentation only, no need to copy the code below */
-.gridContainer * {
-  /* border: 1px solid red; */
+  display: flex; /* Breaks the site on activation! */
 }
 
 /* ----- FLEX BOXES ----- */
