--- a/Styles/index.css
+++ b/Styles/index.css
@@ -15,7 +15,6 @@ body {
   margin: 0;
   background: #333333;
   color: #ffffff;
-  text-transform: uppercase;
 }
 
 /* Our wrapper center aligning the site and height*/
@@ -23,15 +22,15 @@ body {
   height: 100vh;
   display: flex;
   align-items: center;
-}x½
+}
 
 /* Our Content holder for width and background color */
 .content {
   width: 100vw;
   aspect-ratio: 16 / 9;
   background: #333333;
-  margin: 30px; /* margin around all the content */
-  display: flex; /* Breaks the site on activation! */
+  margin: 50px; /* margin around all the content */
+  display: flex;
 }
 
 /* ----- FLEX BOXES ----- */
@@ -39,7 +38,7 @@ body {
 /* Out container for all the basic grid setup  */
 .gridContainer {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 2fr 1fr;
   grid-template-rows: 1.7fr 0.1fr 1fr;
   grid-auto-columns: 1fr;
   gap: 20px 20px;
@@ -55,13 +54,30 @@ body {
   background: #3db6c7;
   border-radius: 15px 15px 0 0;
   grid-area: newsApi;
+  padding: 15px 20px;
 }
 
 /* Our Weather API */
 .weatherApi {
   background: #2788a3;
   border-radius: 0 0 15px 15px;
-  grid-area: weatherApi;
+  grid-area: weatherApi;    
+}
+
+.weatherApi img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 35px;
+  width: 30%;
+}
+
+.weatherApi hr {
+  border: #3db6c7 solid 3px;
+  border-radius: 50px;
+  width: 50%;
+  margin: auto;
+  margin-top: 20px;
 }
 
 /* Our Events Container */
@@ -69,7 +85,37 @@ body {
   background: #2788a3;
   border-radius: 0 0 15px 15px;
   grid-area: eventsContainer;
+  padding: 15px 20px;
+  overflow: hidden;
 }
+
+.eventsContainer h2 {
+  margin-bottom: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2px;;
+}
+
+.event-item {
+  background:  #3db6c7;
+  border-radius: 5px 5px 5px 5px;
+  padding: 15px 25px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: regular;
+  font-size: 16px;
+  white-space: nowrap;  
+  overflow: hidden;
+  text-overflow: ellipsis;
+  /* Grid */
+  display: grid;
+  grid-template-columns: 2fr 0.5fr 0.5fr;
+  grid-auto-columns: 1fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  background: #3db6c7;
+  border-radius: 15px 15px 15px 15px;
+  margin-bottom: 10px;
+  }
 
 /* Our aside container holding timeJs & galleryJs */
 .asideGridContainer {
@@ -90,6 +136,7 @@ body {
   background: #3db6c7;
   border-radius: 15px 15px 0 0;
   grid-area: timeJs;
+  display: grid;
 }
 
 /* Clock ID for styling */
@@ -99,8 +146,9 @@ body {
   font-size: 50px;
   font-weight: bold;
   letter-spacing: 5px;
-  text-align: center;
-  margin-top: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;  
 }
 
 /* Our galleryJs */
