--- a/Styles/index.css
+++ b/Styles/index.css
@@ -50,21 +50,54 @@ body {
 }
 
 /* Our News API */
+
 .newsRss {
   background: #3db6c7;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
   border-radius: 15px 15px 0 0;
   grid-area: newsApi;
   padding: 15px 20px;
+  max-width: 100%;
+  max-height: 100%;
 }
 
-.rssContainer {
-  background: red;
-  border-radius: 15px;
-  height: 100%;
-  width: 100%;
+.feedCardContainer {
+  width: 300px;
+  height: 400px;
+  grid-area: newsApi;
 }
 
-.news-list {}
+.feedCardImg {
+  width: 300px;
+  height: auto;
+  object-fit: cover;
+  border-radius: 10px 10px 0 0;
+}
+
+.feedCardContent {
+  width: 300px;
+  height: 250px;
+  background: #2788a3;
+  border-radius: 0 0 10px 10px;
+}
+
+.feedCardContent h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.2rem;
+  color: white;
+  padding: 0.5rem;
+}
+
+.feedCardContent p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  color: white;
+  padding: 5px;
+}
 
 /* Our Weather API */
 .weatherApi {
