--- a/Styles/index.css
+++ b/Styles/index.css
@@ -123,6 +123,18 @@ body {
   margin-top: 20px;
 }
 
+.currentTemperatur {
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2rem;
+}
+
+.windSpeed {
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2rem;
+}
+
 /* Our Events Container */
 .eventsContainer {
   background: #2788a3;
